objects/Driving_School__c.object
<CustomObject>
    <label>Driving School</label>
    <nameField>
        <label>Driving School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Driving Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phonenumber__c</fullName>
        <label>phonenumber</label>
        <type>Phone</type>
    </fields>
</CustomObject>